[package]
name = "reliverator"
version = "0.1.0"
authors = ["tedu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
regex = "1.3.6"
lazy_static = "1.4.0"
domain = "0.2.4"
tokio-core = "0.1.17"
chrono = "0.4.1"
rusqlite = "0.21.0"
libc = "0.2.69"
